# llmproxy

./: Cargo.toml  Dockerfile  Dockerfile-arm64  Makefile  README.md  README_CN.md  config.default.yaml
.github/workflows/: docker-build.yml  release.yml
examples/config/: ollama.config.yaml
examples/docker/: docker-compose.yaml
examples/kubernetes/: configmap.yaml  deployment.yaml  namespace.yaml  service.yaml
examples/systemd/: llmproxyd.service
src/: admin.rs  args.rs  balancer.rs  breaker.rs  config.rs  const.rs  error.rs  lib.rs  main.rs  manager.rs  metrics.rs  server.rs  upstream.rs
src/api/: mod.rs
src/api/v1/: auth.rs  mod.rs  models.rs  routes.rs  schemas.rs
src/api/v1/handlers/: forward.rs  mod.rs  routing.rs  upstream.rs  upstream_group.rs  util.rs  utils.rs  validation.rs
src/apis/: mod.rs
src/apis/v1/: error.rs  forward.rs  handler.rs  mod.rs  router.rs  types.rs  upstream.rs  upstream_group.rs  validation.rs
src/balancer/: response_aware.rs  simple.rs
src/config/: common.rs  defaults.rs  http_client.rs  http_server.rs  mod.rs  serializer.rs  types.rs  upstream.rs  upstream_group.rs  validation.rs
src/config/validation/: custom.rs  mod.rs
src/server/: forward.rs  handler.rs  mod.rs  router.rs  utils.rs
src/upstream/: builder.rs  http_client.rs  manager.rs  mod.rs
src/util/: extensions.rs
tests/: api_v1_tests.rs  balancer_tests.rs  breaker_tests.rs  config_tests.rs  routing_tests.rs  server_tests.rs  upstream_manager_tests.rs
tests/api_v1_tests/: forwards.rs  helpers.rs  upstream_groups.rs  upstreams.rs
tests/api_v1_tests/routing/: basic_tests.rs  error_path_tests.rs  extreme_case_tests.rs  mod.rs  route_types_tests.rs
tests/apis/: mod.rs
tests/apis/v1/: common.rs  error_tests.rs  forward_tests.rs  handler_tests.rs  integration_tests.rs  mod.rs  router_tests.rs  upstream_group_tests.rs  upstream_tests.rs  validation_tests.rs
tests/balancer_tests/: common.rs  failover.rs  integration.rs  random.rs  response_aware.rs  round_robin.rs
tests/config_tests/: admin.rs  common.rs  file.rs  forward.rs  group.rs  routing.rs  upstream.rs  validation.rs
