[package]
name = "llmproxy"
version = "0.1.0"
edition = "2021"
description = "An intelligent load balancer with smart scheduling that unifies diverse LLMs (Public/Private Cloud, vLLM, Ollama), enabling seamless multi-cloud and hybrid-cloud adoption little client-side code modifications."
license = "MIT"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false
overflow-checks = false

[[bin]]
name = "llmproxyd"
path = "src/main.rs"

[dependencies]
axum = "0.8"
hyper = { version = "1.2", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["timeout"] }
tower_governor = "0.7"
reqwest = { version = "0.12", features = ["json", "stream", "native-tls"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
retry-policies = "0.4"
tokio = { version = "1.44", features = ["full"] }
tokio-graceful-shutdown = "0.15"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
dashmap = "5.5"
once_cell = "1.21"
prometheus = "0.13"
mimalloc = "0.1"
url = "2.5"
bytes = "1.6"
rand = "0.8"
native-tls = "0.2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# 这个一定要放在最后，否则会报错
[target.'cfg(unix)'.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }
[target.'cfg(windows)'.dependencies]
openssl-sys = "0.9"

[dev-dependencies]
# 测试工具
mockall = "0.12"
tokio-test = "0.4"
